   #-1 if an invalid flag/power is given. Suggested by AnneLions. [MG]
 * benchmark(), to benchmark softcode.
 * Added "flag" as a category to valid(), to check for valid names for
   @flag/add and @power/add. [MG]
 * New pfun() function, which evaluates attributes from your parent as if
   you were inheriting them, even if you have your own copy of the attr. [MG]

Fixes:
 * Bug caused by silly assumptions in list2arr() regarding remove_markup
   fixed. Reported by Stoko@M*U*S*H. [GM]
 * Using some substitutions on the connect/motd/etc attributes introduced
   in p11 could cause a crash. Reported by Minion@M*U*S*H. [GM]
 * Substitions on the connect/motd/etc attributes now work as expected
   when a player is connected. Suggested by Minion@M*U*S*H. [GM]
 * English matching works better with possessive get
   (get box's 2nd thing). Reported by israphel.
 * Various additions and changes to the translatable server messages by
   Stoko. Also updated the I18N file, and added /po/pennmush.pot.
 * 'No such file' messages were logged by mistake when connect_file and
   similar options were set to a dbref/attr. Reported by Zalethon. [MG]
 * Some cygwin C library versions define the imaxdiv_t type but not the
   associated imaxdiv() function. Split them up into 2 configure checks.
   Reported by Rankard.
 * Several math functions didn't complain if their first argument wasn't
   a valid number. Reported by Jules. [MG]
 * @wipe would incorrectly set the attribute list for an object in some 
   cases, making some attributes appear to be deleted. Reported by
   Cooee@M*U*S*H. [MG]
 * The Pueblo_Send @power did not allow objects to send restricted HTML 
   tags, just attributes. Reported by Daniel Powell. [MG]
 * Fixed a crashbug in @uptime. [MG]

Version 1.8.3 patchlevel 11                     Jan 01, 2010

Major changes:
  * The WHO, DOING and SESSION commands are now normal game commands,
    and can be @hook'd, typed in lower-case, etc. (The WHO at the login